--- a/weather-forecast/src/index.css
+++ b/weather-forecast/src/index.css
@@ -3,3 +3,15 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+td, th {
+  vertical-align: middle !important;
+  text-align: center !important;
+}
+
+.input-group {
+  margin: 20px 0;
+}
+svg {
+  height: 150px;
+}
